Fixed collapsed navbar margins and fixed issue in which notifications panel would close when deleting a notification.

--- a/TabRepository/wwwroot/css/site.css
+++ b/TabRepository/wwwroot/css/site.css
@@ -69,6 +69,14 @@ body {
     overflow-x: hidden !important;
 }
 
+.top-nav {
+    margin-bottom: 0px;
+}
+
+.bottom-nav {
+    margin-top: 0px;
+}
+
 .search-results {
     position: absolute;
     /*This is relative to the search-form in the navbar*/
